nimnuklear/src/nuklear.h


typedef NK_UINT32 nk_uint;
typedef nk_uint nk_flags;
struct nk_command_buffer;
struct nk_panel;
struct nk_context;
struct nk_vec2 {float x,y;};
struct nk_rect {float x,y,w,h;};
struct nk_image {nk_handle handle;unsigned short w,h;unsigned short region[4];};
struct nk_scroll {nk_uint x, y;};
enum nk_collapse_states {NK_MINIMIZED = nk_false, NK_MAXIMIZED = nk_true};
enum nk_show_states     {NK_HIDDEN = nk_false, NK_SHOWN = nk_true};
enum nk_layout_format   {NK_DYNAMIC, NK_STATIC};
enum nk_tree_type       {NK_TREE_NODE, NK_TREE_TAB};
NK_API int nk_begin(struct nk_context *ctx, const char *title, struct nk_rect bounds, nk_flags flags);
NK_API int nk_begin_titled(struct nk_context *ctx, const char *name, const char *title, struct nk_rect bounds, nk_flags flags);
NK_API void nk_end(struct nk_context *ctx);
NK_API struct nk_window *nk_window_find(struct nk_context *ctx, const char *name);
NK_API struct nk_rect nk_window_get_bounds(const struct nk_context *ctx);
NK_API struct nk_vec2 nk_window_get_position(const struct nk_context *ctx);
NK_API struct nk_vec2 nk_window_get_size(const struct nk_context*);
NK_API float nk_window_get_width(const struct nk_context*);
NK_API float nk_window_get_height(const struct nk_context*);
NK_API struct nk_panel* nk_window_get_panel(struct nk_context*);
NK_API struct nk_rect nk_window_get_content_region(struct nk_context*);
NK_API struct nk_vec2 nk_window_get_content_region_min(struct nk_context*);
NK_API struct nk_vec2 nk_window_get_content_region_max(struct nk_context*);
NK_API struct nk_vec2 nk_window_get_content_region_size(struct nk_context*);
NK_API struct nk_command_buffer* nk_window_get_canvas(struct nk_context*);
NK_API int nk_window_has_focus(const struct nk_context*);
NK_API int nk_window_is_hovered(struct nk_context*);
NK_API int nk_window_is_collapsed(struct nk_context *ctx, const char *name);
NK_API int nk_window_is_closed(struct nk_context*, const char*);
NK_API int nk_window_is_hidden(struct nk_context*, const char*);
NK_API int nk_window_is_active(struct nk_context*, const char*);
NK_API int nk_window_is_any_hovered(struct nk_context*);
NK_API int nk_item_is_any_active(struct nk_context*);
NK_API void nk_window_set_bounds(struct nk_context*, const char *name, struct nk_rect bounds);
NK_API void nk_window_set_position(struct nk_context*, const char *name, struct nk_vec2 pos);
NK_API void nk_window_set_size(struct nk_context*, const char *name, struct nk_vec2);
NK_API void nk_window_set_focus(struct nk_context*, const char *name);
NK_API void nk_window_close(struct nk_context *ctx, const char *name);
NK_API void nk_window_collapse(struct nk_context*, const char *name, enum nk_collapse_states state);
NK_API void nk_window_collapse_if(struct nk_context*, const char *name, enum nk_collapse_states, int cond);
NK_API void nk_window_show(struct nk_context*, const char *name, enum nk_show_states);
NK_API void nk_window_show_if(struct nk_context*, const char *name, enum nk_show_states, int cond);
NK_API void nk_layout_set_min_row_height(struct nk_context*, float height);
NK_API void nk_layout_reset_min_row_height(struct nk_context*);
NK_API struct nk_rect nk_layout_widget_bounds(struct nk_context*);
NK_API float nk_layout_ratio_from_pixel(struct nk_context*, float pixel_width);
NK_API void nk_layout_row_dynamic(struct nk_context *ctx, float height, int cols);
NK_API void nk_layout_row_static(struct nk_context *ctx, float height, int item_width, int cols);
NK_API void nk_layout_row_begin(struct nk_context *ctx, enum nk_layout_format fmt, float row_height, int cols);
NK_API void nk_layout_row_push(struct nk_context*, float value);
NK_API void nk_layout_row_end(struct nk_context*);
NK_API void nk_layout_row(struct nk_context*, enum nk_layout_format, float height, int cols, const float *ratio);
NK_API void nk_layout_row_template_begin(struct nk_context*, float row_height);
NK_API void nk_layout_row_template_push_dynamic(struct nk_context*);
NK_API void nk_layout_row_template_push_variable(struct nk_context*, float min_width);
NK_API void nk_layout_row_template_push_static(struct nk_context*, float width);
NK_API void nk_layout_row_template_end(struct nk_context*);
NK_API void nk_layout_space_begin(struct nk_context*, enum nk_layout_format, float height, int widget_count);
NK_API void nk_layout_space_push(struct nk_context*, struct nk_rect bounds);
NK_API void nk_layout_space_end(struct nk_context*);
NK_API struct nk_rect nk_layout_space_bounds(struct nk_context*);
NK_API struct nk_vec2 nk_layout_space_to_screen(struct nk_context*, struct nk_vec2);
NK_API struct nk_vec2 nk_layout_space_to_local(struct nk_context*, struct nk_vec2);
NK_API struct nk_rect nk_layout_space_rect_to_screen(struct nk_context*, struct nk_rect);
NK_API struct nk_rect nk_layout_space_rect_to_local(struct nk_context*, struct nk_rect);
NK_API int nk_group_begin(struct nk_context*, const char *title, nk_flags);
NK_API int nk_group_begin_titled(struct nk_context*, const char *name, const char *title, nk_flags);
NK_API void nk_group_end(struct nk_context*);
NK_API int nk_group_scrolled_offset_begin(struct nk_context*, nk_uint *x_offset, nk_uint *y_offset, const char *title, nk_flags flags);
NK_API int nk_group_scrolled_begin(struct nk_context*, struct nk_scroll *off, const char *title, nk_flags);
NK_API void nk_group_scrolled_end(struct nk_context*);
NK_API int nk_tree_push_hashed(struct nk_context*, enum nk_tree_type, const char *title, enum nk_collapse_states initial_state, const char *hash, int len,int seed);
NK_API int nk_tree_image_push_hashed(struct nk_context*, enum nk_tree_type, struct nk_image, const char *title, enum nk_collapse_states initial_state, const char *hash, int len,int seed);
NK_API void nk_tree_pop(struct nk_context*);
NK_API int nk_tree_state_push(struct nk_context*, enum nk_tree_type, const char *title, enum nk_collapse_states *state);
NK_API int nk_tree_state_image_push(struct nk_context*, enum nk_tree_type, struct nk_image, const char *title, enum nk_collapse_states *state);
NK_API void nk_tree_state_pop(struct nk_context*);
NK_API int nk_tree_element_push_hashed(struct nk_context*, enum nk_tree_type, const char *title, enum nk_collapse_states initial_state, int *selected, const char *hash, int len, int seed);
NK_API int nk_tree_element_image_push_hashed(struct nk_context*, enum nk_tree_type, struct nk_image, const char *title, enum nk_collapse_states initial_state, int *selected, const char *hash, int len,int seed);
NK_API void nk_tree_element_pop(struct nk_context*);
struct nk_list_view {
    int begin, end, count;
    int total_height;
    struct nk_context *ctx;
    nk_uint *scroll_pointer;
    nk_uint scroll_value;
};
NK_API int nk_list_view_begin(struct nk_context*, struct nk_list_view *out, const char *id, nk_flags, int row_height, int row_count);
NK_API void nk_list_view_end(struct nk_list_view*);
struct nk_command_buffer {
    struct nk_buffer *base;
    struct nk_rect clip;
    int use_clipping;
    nk_handle userdata;
    nk_size begin, end, last;
};
struct nk_panel {
    enum nk_panel_type type;
    nk_flags flags;
    struct nk_rect bounds;
    nk_uint *offset_x;
    nk_uint *offset_y;
    float at_x, at_y, max_x;
    float footer_height;
    float header_height;
    float border;
    unsigned int has_scrolling;
    struct nk_rect clip;
    struct nk_menu_state menu;
    struct nk_row_layout row;
    struct nk_chart chart;
    struct nk_command_buffer *buffer;
    struct nk_panel *parent;
};
struct nk_window {
    unsigned int seq;
    nk_hash name;
    char name_string[NK_WINDOW_MAX_NAME];
    nk_flags flags;
    struct nk_rect bounds;
    struct nk_scroll scrollbar;
    struct nk_command_buffer buffer;
    struct nk_panel *layout;
    float scrollbar_hiding_timer;
    struct nk_property_state property;
    struct nk_popup_state popup;
    struct nk_edit_state edit;
    unsigned int scrolled;
    struct nk_table *tables;
    unsigned int table_count;
    struct nk_window *next;
    struct nk_window *prev;
    struct nk_window *parent;
};
struct nk_context {
    struct nk_input input;
    struct nk_style style;
    struct nk_buffer memory;
    struct nk_clipboard clip;
    nk_flags last_widget_state;
    enum nk_button_behavior button_behavior;
    struct nk_configuration_stacks stacks;
    float delta_time_seconds;
#ifdef NK_INCLUDE_VERTEX_BUFFER_OUTPUT
    struct nk_draw_list draw_list;
#endif
#ifdef NK_INCLUDE_COMMAND_USERDATA
    nk_handle userdata;
#endif
    struct nk_text_edit text_edit;
    struct nk_command_buffer overlay;
    int build;
    int use_pool;
    struct nk_pool pool;
    struct nk_window *begin;
    struct nk_window *end;
    struct nk_window *active;
    struct nk_window *current;
    struct nk_page_element *freelist;
    unsigned int count;
    unsigned int seq;
};