demo/sdl_opengl3/nimnuklear/nuklear.nim


proc begin*(ctx: ptr context; title: cstring; bounds: rect; flags: flags): cint {.cdecl,
    importc: "nk_begin", header: headernuklear.}
proc begin_titled*(ctx: ptr context; name: cstring; title: cstring; bounds: rect;
                  flags: flags): cint {.cdecl, importc: "nk_begin_titled",
                                     header: headernuklear.}
proc `end`*(ctx: ptr context) {.cdecl, importc: "nk_end", header: headernuklear.}
proc window_find*(ctx: ptr context; name: cstring): ptr window {.cdecl,
    importc: "nk_window_find", header: headernuklear.}
proc window_get_bounds*(ctx: ptr context): rect {.cdecl,
    importc: "nk_window_get_bounds", header: headernuklear.}
proc window_get_position*(ctx: ptr context): vec2 {.cdecl,
    importc: "nk_window_get_position", header: headernuklear.}
proc window_get_size*(a2: ptr context): vec2 {.cdecl, importc: "nk_window_get_size",
    header: headernuklear.}
proc window_get_width*(a2: ptr context): cfloat {.cdecl,
    importc: "nk_window_get_width", header: headernuklear.}
proc window_get_height*(a2: ptr context): cfloat {.cdecl,
    importc: "nk_window_get_height", header: headernuklear.}
proc window_get_panel*(a2: ptr context): ptr panel {.cdecl,
    importc: "nk_window_get_panel", header: headernuklear.}
proc window_get_content_region*(a2: ptr context): rect {.cdecl,
    importc: "nk_window_get_content_region", header: headernuklear.}
proc window_get_content_region_min*(a2: ptr context): vec2 {.cdecl,
    importc: "nk_window_get_content_region_min", header: headernuklear.}
proc window_get_content_region_max*(a2: ptr context): vec2 {.cdecl,
    importc: "nk_window_get_content_region_max", header: headernuklear.}
proc window_get_content_region_size*(a2: ptr context): vec2 {.cdecl,
    importc: "nk_window_get_content_region_size", header: headernuklear.}
proc window_get_canvas*(a2: ptr context): ptr command_buffer {.cdecl,
    importc: "nk_window_get_canvas", header: headernuklear.}
proc window_has_focus*(a2: ptr context): cint {.cdecl, importc: "nk_window_has_focus",
    header: headernuklear.}
proc window_is_hovered*(a2: ptr context): cint {.cdecl,
    importc: "nk_window_is_hovered", header: headernuklear.}
proc window_is_collapsed*(ctx: ptr context; name: cstring): cint {.cdecl,
    importc: "nk_window_is_collapsed", header: headernuklear.}
proc window_is_closed*(a2: ptr context; a3: cstring): cint {.cdecl,
    importc: "nk_window_is_closed", header: headernuklear.}
proc window_is_hidden*(a2: ptr context; a3: cstring): cint {.cdecl,
    importc: "nk_window_is_hidden", header: headernuklear.}
proc window_is_active*(a2: ptr context; a3: cstring): cint {.cdecl,
    importc: "nk_window_is_active", header: headernuklear.}
proc window_is_any_hovered*(a2: ptr context): cint {.cdecl,
    importc: "nk_window_is_any_hovered", header: headernuklear.}
proc item_is_any_active*(a2: ptr context): cint {.cdecl,
    importc: "nk_item_is_any_active", header: headernuklear.}
proc window_set_bounds*(a2: ptr context; name: cstring; bounds: rect) {.cdecl,
    importc: "nk_window_set_bounds", header: headernuklear.}
proc window_set_position*(a2: ptr context; name: cstring; pos: vec2) {.cdecl,
    importc: "nk_window_set_position", header: headernuklear.}
proc window_set_size*(a2: ptr context; name: cstring; a4: vec2) {.cdecl,
    importc: "nk_window_set_size", header: headernuklear.}
proc window_set_focus*(a2: ptr context; name: cstring) {.cdecl,
    importc: "nk_window_set_focus", header: headernuklear.}
proc window_close*(ctx: ptr context; name: cstring) {.cdecl,
    importc: "nk_window_close", header: headernuklear.}
proc window_collapse*(a2: ptr context; name: cstring; state: collapse_states) {.cdecl,
    importc: "nk_window_collapse", header: headernuklear.}
proc window_collapse_if*(a2: ptr context; name: cstring; a4: collapse_states; cond: cint) {.
    cdecl, importc: "nk_window_collapse_if", header: headernuklear.}
proc window_show*(a2: ptr context; name: cstring; a4: show_states) {.cdecl,
    importc: "nk_window_show", header: headernuklear.}
proc window_show_if*(a2: ptr context; name: cstring; a4: show_states; cond: cint) {.cdecl,
    importc: "nk_window_show_if", header: headernuklear.}
proc layout_set_min_row_height*(a2: ptr context; height: cfloat) {.cdecl,
    importc: "nk_layout_set_min_row_height", header: headernuklear.}
proc layout_reset_min_row_height*(a2: ptr context) {.cdecl,
    importc: "nk_layout_reset_min_row_height", header: headernuklear.}
proc layout_widget_bounds*(a2: ptr context): rect {.cdecl,
    importc: "nk_layout_widget_bounds", header: headernuklear.}
proc layout_ratio_from_pixel*(a2: ptr context; pixel_width: cfloat): cfloat {.cdecl,
    importc: "nk_layout_ratio_from_pixel", header: headernuklear.}
proc layout_row_dynamic*(ctx: ptr context; height: cfloat; cols: cint) {.cdecl,
    importc: "nk_layout_row_dynamic", header: headernuklear.}
proc layout_row_static*(ctx: ptr context; height: cfloat; item_width: cint; cols: cint) {.
    cdecl, importc: "nk_layout_row_static", header: headernuklear.}
proc layout_row_begin*(ctx: ptr context; fmt: layout_format; row_height: cfloat;
                      cols: cint) {.cdecl, importc: "nk_layout_row_begin",
                                  header: headernuklear.}
proc layout_row_push*(a2: ptr context; value: cfloat) {.cdecl,
    importc: "nk_layout_row_push", header: headernuklear.}
proc layout_row_end*(a2: ptr context) {.cdecl, importc: "nk_layout_row_end",
                                    header: headernuklear.}
proc layout_row*(a2: ptr context; a3: layout_format; height: cfloat; cols: cint;
                ratio: ptr cfloat) {.cdecl, importc: "nk_layout_row",
                                  header: headernuklear.}
proc layout_row_template_begin*(a2: ptr context; row_height: cfloat) {.cdecl,
    importc: "nk_layout_row_template_begin", header: headernuklear.}
proc layout_row_template_push_dynamic*(a2: ptr context) {.cdecl,
    importc: "nk_layout_row_template_push_dynamic", header: headernuklear.}
proc layout_row_template_push_variable*(a2: ptr context; min_width: cfloat) {.cdecl,
    importc: "nk_layout_row_template_push_variable", header: headernuklear.}
proc layout_row_template_push_static*(a2: ptr context; width: cfloat) {.cdecl,
    importc: "nk_layout_row_template_push_static", header: headernuklear.}
proc layout_row_template_end*(a2: ptr context) {.cdecl,
    importc: "nk_layout_row_template_end", header: headernuklear.}
proc layout_space_begin*(a2: ptr context; a3: layout_format; height: cfloat;
                        widget_count: cint) {.cdecl,
    importc: "nk_layout_space_begin", header: headernuklear.}
proc layout_space_push*(a2: ptr context; bounds: rect) {.cdecl,
    importc: "nk_layout_space_push", header: headernuklear.}
proc layout_space_end*(a2: ptr context) {.cdecl, importc: "nk_layout_space_end",
                                      header: headernuklear.}
proc layout_space_bounds*(a2: ptr context): rect {.cdecl,
    importc: "nk_layout_space_bounds", header: headernuklear.}
proc layout_space_to_screen*(a2: ptr context; a3: vec2): vec2 {.cdecl,
    importc: "nk_layout_space_to_screen", header: headernuklear.}
proc layout_space_to_local*(a2: ptr context; a3: vec2): vec2 {.cdecl,
    importc: "nk_layout_space_to_local", header: headernuklear.}
proc layout_space_rect_to_screen*(a2: ptr context; a3: rect): rect {.cdecl,
    importc: "nk_layout_space_rect_to_screen", header: headernuklear.}
proc layout_space_rect_to_local*(a2: ptr context; a3: rect): rect {.cdecl,
    importc: "nk_layout_space_rect_to_local", header: headernuklear.}
proc group_begin*(a2: ptr context; title: cstring; a4: flags): cint {.cdecl,
    importc: "nk_group_begin", header: headernuklear.}
proc group_begin_titled*(a2: ptr context; name: cstring; title: cstring; a5: flags): cint {.
    cdecl, importc: "nk_group_begin_titled", header: headernuklear.}
proc group_end*(a2: ptr context) {.cdecl, importc: "nk_group_end",
                               header: headernuklear.}
proc group_scrolled_offset_begin*(a2: ptr context; x_offset: ptr uint;
                                 y_offset: ptr uint; title: cstring; flags: flags): cint {.
    cdecl, importc: "nk_group_scrolled_offset_begin", header: headernuklear.}
proc group_scrolled_begin*(a2: ptr context; off: ptr scroll; title: cstring; a5: flags): cint {.
    cdecl, importc: "nk_group_scrolled_begin", header: headernuklear.}
proc group_scrolled_end*(a2: ptr context) {.cdecl, importc: "nk_group_scrolled_end",
                                        header: headernuklear.}
proc tree_push_hashed*(a2: ptr context; a3: tree_type; title: cstring;
                      initial_state: collapse_states; hash: cstring; len: cint;
                      seed: cint): cint {.cdecl, importc: "nk_tree_push_hashed",
                                       header: headernuklear.}
proc tree_image_push_hashed*(a2: ptr context; a3: tree_type; a4: img; title: cstring;
                            initial_state: collapse_states; hash: cstring;
                            len: cint; seed: cint): cint {.cdecl,
    importc: "nk_tree_image_push_hashed", header: headernuklear.}
proc tree_pop*(a2: ptr context) {.cdecl, importc: "nk_tree_pop", header: headernuklear.}
proc tree_state_push*(a2: ptr context; a3: tree_type; title: cstring;
                     state: ptr collapse_states): cint {.cdecl,
    importc: "nk_tree_state_push", header: headernuklear.}
proc tree_state_image_push*(a2: ptr context; a3: tree_type; a4: img; title: cstring;
                           state: ptr collapse_states): cint {.cdecl,
    importc: "nk_tree_state_image_push", header: headernuklear.}
proc tree_state_pop*(a2: ptr context) {.cdecl, importc: "nk_tree_state_pop",
                                    header: headernuklear.}
proc tree_element_push_hashed*(a2: ptr context; a3: tree_type; title: cstring;
                              initial_state: collapse_states; selected: ptr cint;
                              hash: cstring; len: cint; seed: cint): cint {.cdecl,
    importc: "nk_tree_element_push_hashed", header: headernuklear.}
proc tree_element_image_push_hashed*(a2: ptr context; a3: tree_type; a4: img;
                                    title: cstring;
                                    initial_state: collapse_states;
                                    selected: ptr cint; hash: cstring; len: cint;
                                    seed: cint): cint {.cdecl,
    importc: "nk_tree_element_image_push_hashed", header: headernuklear.}
proc tree_element_pop*(a2: ptr context) {.cdecl, importc: "nk_tree_element_pop",
                                      header: headernuklear.}
type
  list_view* {.importc: "struct nk_list_view", header: headernuklear.} = object
    begin* {.importc: "begin".}: cint
    `end`* {.importc: "end".}: cint
    count* {.importc: "count".}: cint
    total_height* {.importc: "total_height".}: cint
    ctx* {.importc: "ctx".}: ptr context
    scroll_pointer* {.importc: "scroll_pointer".}: ptr uint
    scroll_value* {.importc: "scroll_value".}: uint


proc list_view_begin*(a2: ptr context; `out`: ptr list_view; id: cstring; a5: flags;
                     row_height: cint; row_count: cint): cint {.cdecl,
    importc: "nk_list_view_begin", header: headernuklear.}
proc list_view_end*(a2: ptr list_view) {.cdecl, importc: "nk_list_view_end",
                                     header: headernuklear.}
type
  widget_layout_states* {.size: sizeof(cint).} = enum
    WIDGET_INVALID, WIDGET_VALID, WIDGET_ROM

